--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+.container{
+  background-color: aqua;
+  color: black;
+  border: 20px;
+ 
+ padding: 20px; border-radius: 25px;
+}
